LogoutputMulti/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
  - name: http
    protocol: TCP
    port: 4563
    targetPort: 8000
